# EnergyTop

./: AGENT.md  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  energytop.ini
.github/workflows/: ci.yml  daily-main-latest-deploy.yml  pr-binary-artifacts.yml
include/: power_record.h
scripts/: installer_stub.sh.in  installer_stub_android.sh.in
scripts/ci/: android_emulator_smoke_test.sh  build_android_deps.sh  verify_android_binary.sh
src/cli/: energytop_main.cpp
src/collectors/: battery_collector.cpp  battery_collector.h  collector.h  collector_registry.cpp  collector_registry.h
src/config/: config.cpp  config.h
src/daemon/: energy_daemon.cpp  energy_daemon.h  energytopd_main.cpp
src/stats/: power_stats.cpp  power_stats.h
tests/system/: test_battery_collector_mock_sysfs.cpp  test_daemon_mock_sysfs.cpp  test_helpers.h
tests/unit/: test_collector_registry.cpp  test_config.cpp  test_power_stats.cpp
